--- a/index.html
+++ b/index.html
@@ -41,18 +41,35 @@
         66% { transform: translate(-20px, 20px) scale(0.9); }
         100% { transform: translate(0px, 0px) scale(1); }
       }
+
+      /* Subtle border pulse for dashboard container */
+      @keyframes border-pulse {
+        0%, 100% {
+          border-color: #f1f5f9; /* slate-100 */
+          box-shadow: 0 10px 40px -10px rgba(0,0,0,0.05);
+        }
+        50% {
+          border-color: rgba(216, 180, 254, 0.4); /* purple-300 low opacity */
+          box-shadow: 0 0 20px rgba(168, 85, 247, 0.15); /* purple-500 glow */
+        }
+      }
+      
+      .animate-border-pulse {
+        animation: border-pulse 4s ease-in-out infinite;
+      }
     </style>
   <script type="importmap">
 {
   "imports": {
-    "@google/genai": "https://esm.sh/@google/genai@^1.41.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "vite": "https://esm.sh/vite@^7.3.1",
-    "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.41.0",
     "react-markdown": "https://esm.sh/react-markdown@^10.1.0",
     "firebase/": "https://esm.sh/firebase@^12.9.0/",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4"
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4",
+    "@paypal/react-paypal-js": "https://esm.sh/@paypal/react-paypal-js@^8.1.3"
   }
 }
 </script>
